Sun Sep 21 11:03:32 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* signal.c (ruby_signal): although "EINVAL from sigaction(2) is
	  not a bug", but even it is a failure.  pointed at toRuby/guRuby
	  in RubyHiroba.

Sat Sep 20 03:00:26 2014  Masaki Matsushita <glass.saga@gmail.com>

	* lib/tempfile.rb: define parameters appropriately and some
	                   refactoring.

	* lib/tmpdir.rb:   ditto.

Sat Sep 20 23:58:21 2014  Tanaka Akira  <akr@fsij.org>

	* enum.c (enum_chunk): Deprecate the state management.
	  (enum_slice_before): Ditto.

Sat Sep 20 15:39:11 2014  Tanaka Akira  <akr@fsij.org>

	* enum.c (enum_slice_when): New method: Enumerable#slice_when.
	  (slicewhen_i): New function.
	  (slicewhen_ii): New function.

	* enumerator.c (InitVM_Enumerator): New method:
	  Enumerator::Lazy#slice_when.

	  [ruby-core:62499] [Feature #9826]

Sat Sep 20 11:55:19 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* .travis.yml: added new configurations for osx on travis ci.
	  [fix GH-723]
	* test/ruby/test_object.rb: tweaked to memory leak limit for osx build.

Sat Sep 20 10:48:41 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (assoc): allow quoted ID as a key of a hash literal.
	  [ruby-core:34453] [Feature #4276]

Sat Sep 20 10:23:00 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_set_arguments): store local variable IDs in
	  temporary list as Symbols.  previously these are stored as
	  Fixnums to prevent from GC, but IDs of dynamic symbols can
	  exceed Fixnum range and cause RangeError at inverting from
	  Fixnum.  [ruby-dev:48564] [Bug #10266]

Sat Sep 20 10:02:51 2014  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/lib/openssl/x509.rb (OpenSSL::X509::Name#pretty_print):
	  New method.
	  (OpenSSL::X509::Certificate#pretty_print): Ditto.

	* ext/openssl/lib/openssl/bn.rb (OpenSSL::BN#pretty_print): Ditto.

Sat Sep 20 07:55:57 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
