@@ -393,7 +393,7 @@ if defined?(WIN32OLE_VARIANT)
       obj = WIN32OLE_VARIANT.new(41878.524268391200167, WIN32OLE::VARIANT::VT_DATE)
       t = obj.value
       assert_equal("2014-08-27 12:34:56", t.strftime('%Y-%m-%d %H:%M:%S'))
-      assert_equal(789, (t.nsec / 1000000).round)
+      assert_in_delta(0.789, t.nsec / 1000000000.0, 0.001)
     end
 
     def test_conversion_time2date_with_msec
@@ -401,12 +401,12 @@ if defined?(WIN32OLE_VARIANT)
       t0 += 0.789
       t1 = WIN32OLE_VARIANT.new(t0).value
       assert_equal("2014-08-27 12:34:56", t1.strftime('%Y-%m-%d %H:%M:%S'))
-      assert_equal(789, (t1.nsec / 1000000).round)
+      assert_in_delta(0.789, t1.nsec / 1000000000.0, 0.001)
 
       t0 = Time.now
       t1 = WIN32OLE_VARIANT.new(t0).value
       assert_equal(t0.strftime('%Y-%m-%d %H:%M:%S'), t1.strftime('%Y-%m-%d %H:%M:%S'))
-      assert_equal(t0.nsec.round(-6), t1.nsec.round(-6))
+      assert_in_delta(t0.nsec/1000000000.0, t1.nsec / 1000000000.0, 0.001)
     end
 
     # this test failed because of VariantTimeToSystemTime
