@@ -1,3 +1,13 @@
+Sun Sep 21 11:16:56 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>
+
+	* ext/win32ole/win32ole.c (rbtime2vtdate, vtdate2rbtime): fix
+	  the bug in conversion of milliseconds. [Bug #10258]
+
+	* test/win32ole/test_win32ole_variant.rb
+	  (test_conversion_dbl2date_with_msec,
+	   test_conversion_time2date_with_msec): use assert_in_delta instead
+	   of assert_equal to treat an acceptable error range.
+
 Sun Sep 21 11:03:32 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* signal.c (ruby_signal): although "EINVAL from sigaction(2) is
